add:relacion entre tablas

--- a/app/views/empleados/_form.html.erb
+++ b/app/views/empleados/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :nave %>
+    <%= form.text_field :nave_id %>
+  </div>
+
+  <div class="field">
     <%= form.label :apellido %>
     <%= form.text_field :apellido %>
   </div>
