--- a/app/views/naves/_form.html.erb
+++ b/app/views/naves/_form.html.erb
@@ -21,6 +21,10 @@
     <%= form.label :fabricante %>
     <%= form.text_field :fabricante %>
   </div>
+  <div class="field">
+    <%= form.label :id %>
+    <%= form.text_field :nave_id %>
+  </div>
 
   <div class="actions">
     <%= form.submit 'Agregar | Modificar', :class => 'btn btn-success'%>
