--- a/app/views/carts/_cart_item.html.erb
+++ b/app/views/carts/_cart_item.html.erb
@@ -26,8 +26,10 @@
             <div class="btn-group">
               <%= f.submit "Actualizar Cantidad", class: 'btn btn-primary' %>
               <%= link_to "Borrar", item, method: :delete, remote: true, class: 'btn btn-danger'  %>
+              <%= link_to "Pagar",pay_pay_path ,class: 'btn btn-success' %>
             </div>
             <span>Total Price: <%= item.total_price %></span>
+
           <% end %>
         </div>
           </div>
