add:se agregaron detalles

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -136,7 +136,7 @@
       <div class="card">
         <img src="https://c.wallhere.com/photos/30/2a/planets_nebula_light_swirl-655953.jpg!d" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Mas Cerca que Nunca</h5>
           <p class="card-text">Un proyecto para enviar pequeñas naves espaciales a otros sistemas solares y realizar así viajes interestelares podría estar más cerca que nunca de ser una realidad</p>
         </div>
         <div class="card-footer">
@@ -163,7 +163,7 @@
       <div class="card">
         <img src="https://c.wallhere.com/photos/dc/0b/planets_stars_rays_galaxy-645177.jpg!d" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title"></h5>
+          <h5 class="card-title">Revolucionaria Nave</h5>
           <p class="card-text">Se trata de la construcción de naves espaciales que viajarán billones de kilómetros, mucho más allá de cualquier nave en el pasado.
           </p>
         </div>
@@ -197,7 +197,7 @@
           </dl>
           <dl class="contact-list">
             <dt>email:</dt>
-            <dd><a href="mailto:#">freekittens@gmail.com</a></dd>
+            <dd><a href="mailto:#">Interestelar@gmail.com</a></dd>
           </dl>
           <dl class="contact-list">
             <dt>Telefonos|Celular:</dt>
