--- a/app/views/nosotros/nosotros.html.erb
+++ b/app/views/nosotros/nosotros.html.erb
@@ -1,2 +1,76 @@
-<h1>Nosotros#nosotros</h1>
-<p>Find me in app/views/nosotros/nosotros.html.erb</p>
+
+
+<div style="margin-top:100px">
+<div class="card-deck">
+  <div class="card">
+    <img src="https://c.wallhere.com/photos/41/dc/water_surface_sky_planets_stars-790996.jpg!d" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Vision</h5>
+      <p class="card-text">A futuro ser la Empresa lider en el mercado con respecto a este tipo de viajes.</p>
+      
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://c.wallhere.com/photos/51/c8/mars_satellites_stars_planets-791001.jpg!d" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Mision</h5>
+      <p class="card-text">Transportar sueños entregando lo mejor de nosotros para lograr la preferencia de clientes y comunidades, contruyendo sustentable.</p>
+      
+    </div>
+  </div>
+  <div class="card">
+    <img style ="height:325px"src="https://c.wallhere.com/photos/f3/0c/1920x1200_px_clouds_dust_Galaxies_nebulae_outer_planets_space-804687.jpg!d" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Quienes somos?</h5>
+      <p class="card-text">Somos una empresa visionaria que busca masificar los viajes interestelares donde algunos por una modica suma puedan experimentar la belleza de nuestro universo en primera persona.</p>
+    </div>
+  </div>
+</div>
+
+</div>
+
+<div style="margin-top: 50px"</div>
+<footer class="section footer-classic context-dark bg-image" style="background: #2d3246; margin-bottom:0px;">
+    <div class="container">
+      <div class="row row-30">
+        <div class="col-md-4 col-xl-5">
+          <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
+            <p>Market Place.Viajes Interestelares </p>
+            <!-- Rights-->
+            <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Interestelar</span><span>. </span><span>Todos los Derechos Reservados.</span></p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Contactos</h5>
+          <dl class="contact-list">
+            <dt>Direccion:</dt>
+            <dd>Av.Falsa 123,Springfield</dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>email:</dt>
+            <dd><a href="mailto:#">Interestelar@gmail.com</a></dd>
+          </dl>
+          <dl class="contact-list">
+            <dt>Telefonos|Celular:</dt>
+            <dd><a href="tel:#">+91 7568543012</a> <span>or</span> <a href="tel:#">+91 9571195353</a>
+            </dd>
+          </dl>
+        </div>
+        <div class="col-md-4 col-xl-3">
+          <h5>Links</h5>
+          <ul class="nav-list">
+            <li><a href="#">Acerca de</a></li>
+            <li><a href="#">Projectos</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contactos</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row no-gutters social-container">
+      <div class="col"><a class="social-inner btn-facebook" href="#"><span class="icon mdi mdi-facebook"></span><span>Facebook</span></a></div>
+      <div class="col"><a class="social-inner btn-instagram" href="#"><span class="icon mdi mdi-instagram"></span><span>instagram</span></a></div>
+      <div class="col"><a class="social-inner btn-twitter" href="#"><span class="icon mdi mdi-twitter"></span><span>twitter</span></a></div>
+      <div class="col"><a class="social-inner btn-google" href="#"><span class="icon mdi mdi-youtube-play"></span><span>google</span></a></div>
+    </div>
+  </footer>
