--- a/app/views/pay/pay.html.erb
+++ b/app/views/pay/pay.html.erb
@@ -17,7 +17,8 @@
   	<%= image_tag item.product.image.url(:medium), class: 'card-img.top' %>
   <div class="card-body">
     <h5 class="card-title"><h3><%= item.product.name%></h3></h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text"><small>Viajes Interestelar todos los derechos reservados.los asientos y la distribucion de estos estaran predispuestos y organizados por la empresa, no podra optar a un cambio o devolucion del dinero.
+    se le sera asignado uno de estos.</small></p>
   </div>
   <div class="card-body">
    <ul class="list-group list-group-flush">
@@ -28,7 +29,7 @@
     <li class="list-group-item"><h5><span>Origen:<%= item.product.nave.vuelo.first.origen%></span></h5></li>
     <li class="list-group-item"><h5><span>Destino:<%= item.product.nave.vuelo.first.destino%></span></h5></li>
     <li class="list-group-item"><h5><span>Cantidad Pasajes:x<%= item.quantity%></span></h5></li>
-    <li class="list-group-item"><h5><span>Total Price: <%= item.total_price %></span></h5></li>
+    <li class="list-group-item"><h5><span>Total Precio: <%= item.total_price %></span></h5></li>
 
   </ul>
   </div>
